--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
     "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
